--- a/Projectpt1/Presentacion.csproj
+++ b/Projectpt1/Presentacion.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APLICACION.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="APLICACION.Designer.cs">
+      <DependentUpon>APLICACION.cs</DependentUpon>
+    </Compile>
     <Compile Include="LOGIN.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="APLICACION.resx">
+      <DependentUpon>APLICACION.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LOGIN.resx">
       <DependentUpon>LOGIN.cs</DependentUpon>
     </EmbeddedResource>
